manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: togglemaster-evaluation
  labels:
    app.kubernetes.io/name: evaluation-service
    app.kubernetes.io/component: evaluation
    app.kubernetes.io/part-of: togglemaster
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: evaluation-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: evaluation-service
        app.kubernetes.io/component: evaluation
        app.kubernetes.io/part-of: togglemaster
    spec:
      containers:
        - name: evaluation-service
          image: 730335650747.dkr.ecr.us-east-1.amazonaws.com/togglemaster/evaluation-service:50f9480d19a7e6a1beb0ae8b22c6b3101949b85d
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8004
              protocol: TCP
          command: ["/bin/sh", "-c"]
          args:
            - |
              export REDIS_URL=$(cat /shared/redis_url)
              exec /app/evaluation-service
          volumeMounts:
            - name: shared-data
              mountPath: /shared
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: shared-data
          emptyDir: {}
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: evaluation-service
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
