manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster-evaluation
  labels:
    app.kubernetes.io/name: evaluation-service
    app.kubernetes.io/component: evaluation
    app.kubernetes.io/part-of: togglemaster
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: evaluation-service
  ports:
    - name: http
      port: 8004
      targetPort: 8004
      protocol: TCP
