manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ingress
  namespace: togglemaster-evaluation
  labels:
    app.kubernetes.io/name: evaluation-service
    app.kubernetes.io/component: evaluation
    app.kubernetes.io/part-of: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: toggle.pt
      http:
        paths:
          - path: /evaluate(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
